@@ -1,3 +1,8 @@
+2010-09-02  MIYAMUKO Katsuyuki
+
+	* api/user.l, api/repo.l, api/types.l: public-key id を引数にとる関数には
+	public-key 構造体も指定できるようにした。
+
 2010-08-31  MIYAMUKO Katsuyuki
 
 	* api/user.l, api/gist.l: ユーザ名を引数に指定する関数には
